# ai-travel-backend-board

./: .gitignore  .ruff.toml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 11057fc867b3_add_users_and_organizations_tables.py  218c23e843de_initial_migration.py  53dcb8de4f7d_add_users_table.py  bd6ac512da70_sync_models_user_fields_places_reviews_.py
src/: database.py  events.py  main.py  settings.py  valkey_client.py
src/api/: dependencies.py
src/api/routers/: auth.py  health.py  notifications.py  places.py  reviews.py
src/graphql/: context.py  schema.py
src/models/: __init__.py  enums.py  notifications.py  organization.py  places.py  reviews.py  users.py  votes.py
src/repositories/: health_repository.py  notification_repository.py  place_repository.py  review_repository.py  user_repository.py  vote_repository.py
src/schemas/: auth.py  health_schema.py  notifications.py  places.py  reviews.py  users.py
src/services/: auth_service.py  health_service.py  notification_service.py  place_service.py  review_service.py  vote_service.py
tests/: conftest.py  test_graphql_e2e.py  test_health.py
