[project]
name = "ai-travel-backend-board"
version = "0.1.0"
description = "A structured FastAPI application with routers, services, repositories, and schemas"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai-travel-backend-board"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
