[project]
name = "ai-travel-backend-board"
version = "0.1.0"
description = "A structured FastAPI application with routers, services, repositories, and schemas"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.16.5",
    "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai-travel-backend-board"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
